--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,8 @@
 :root {
-  --charcoal: #191919;
-  --crimson-dark: #750e21;
-  --burnt-orange: #e3651d;
-  --lime: #bed754;
-  --grey: #b0b0b0;
+  --black: #000000;
+  --secondary-green: #253900;
+  --primary-green: #08cb00;
+  --white: #eeeeee;
   --radius: 3px;
 }
 * {
@@ -12,7 +11,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: var(--charcoal);
+  background-color: var(--black);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,6 +24,7 @@ body {
   width: 60%;
   height: 50%;
   min-height: 250px;
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,16 +39,16 @@ body {
   max-width: 90%;
 }
 span:nth-child(1) {
-  color: var(--burnt-orange);
+  color: var(--primary-green);
 }
 span:nth-child(2) {
-  color: var(--grey);
+  color: var(--white);
 }
 span:nth-child(3) {
-  color: var(--burnt-orange);
+  color: var(--primary-green);
 }
 span:nth-child(4) {
-  color: var(--lime);
+  color: var(--white);
 }
 
 h1,
@@ -57,10 +57,10 @@ h2 {
   height: 10%;
 }
 h2 {
-  color: var(--burnt-orange);
+  color: var(--white);
 }
 form {
-  background-color: var(--crimson-dark);
+  background-color: var(--secondary-green);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -71,19 +71,21 @@ form {
   height: 90%;
 }
 textarea {
-  background-color: var(--charcoal);
+  background-color: var(--black);
   border-radius: var(--radius);
   width: 90%;
-  color: var(--grey);
+  color: var(--white);
   height: 60%;
   font-family: monospace;
+  font-size: 20px;
+  border: none;
 }
-textarea:focus {
+  textarea:focus {
+  border: 1px solid var(--white);
   outline: none;
-  border-color: var(--grey);
 }
 label {
-  background-color: var(--burnt-orange);
+  background-color: var(--primary-green);
   height: 100%;
   flex: 1;
   border: 1.5px solid transparent;
@@ -93,16 +95,15 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 15px;
   text-align: center;
-  color: var(--charcoal);
+  color: var(--black);
   border-radius: var(--radius);
   font-size: 15px;
   cursor: pointer;
 }
 label:hover,
 button:hover {
-  filter: brightness(1.5);
+  filter: brightness(1);
   transform: scale(1.01);
 }
 label:active,
@@ -114,30 +115,48 @@ input[type='radio'] {
   appearance: none;
 }
 label:has(input[type='radio']:checked) {
-  border-color: var(--lime);
+  border-color: var(--white);
   box-sizing: border-box;
 }
 button {
-  background-color: var(--lime);
+  background-color: var(--white);
   border: none;
   font-family: inherit;
   height: 20%;
   width: 90%;
 }
 #pre-holder {
-  background-color: var(--crimson-dark);
+  background-color: var(--secondary-green);
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
   padding: 3% 0;
-  height: 90%;
+  height: 95%;
 }
 pre {
   width: 90%;
   height: 100%;
-  background-color: var(--charcoal);
-  color: var(--grey);
+  background-color: var(--black);
+  color: var(--white);
   overflow: auto;
+  border-radius: var(--radius);
+}
+@media (max-width: 600px) {
+  #labels-holder {
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    height: 50%;
+  }
+  textarea {
+    height: 30%;
+    font-size: 15px;
+  }
+  button {
+    height: 20%;
+  }
+}
+@media (min-width: 601px) and (max-width: 900px) {
 }
