--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         ></textarea>
         <div id="labels-holder">
           <label>
-            <input type="radio" name="banner" value="standard" required />
+            <input type="radio" name="banner" value="standard" required checked/>
             Standard
           </label>
 
