--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: monospace;
   height: 100vh;
   padding: 20px;
@@ -149,9 +150,30 @@ pre {
 
 p {
   color: var(--white);
-  background-color: #08cb00;
+  text-align: center;
+  background-color: var(--black);
+  width: 90%;
+  height: 80%;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-family: 'Times New Roman', serif;
+  text-transform: uppercase;
+  padding: 0 20%;
 }
 
+.error {
+  background-color: var(--secondary-green);
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  height: 60%;
+}
 span:nth-child(1) {
   color: var(--primary-green);
 }
@@ -182,7 +204,16 @@ span:nth-child(4) {
   button {
     height: 20%;
   }
+
+  p {
+    height: 90%;
+    width: 80%;
+    font-size: 22px;
+  }
 }
 
-@media (min-width: 601px) and (max-width: 900px) {
+@media (min-width: 601px) and (max-width: 1200px) {
+  p {
+    font-size: 40px;
+  }
 }
