--- a/assets/style.css
+++ b/assets/style.css
@@ -177,7 +177,7 @@ p {
   text-align: center;
   background-color: var(--black);
   width: 90%;
-  height: 80%;
+  height: 100%;
   border-radius: 8px;
   display: flex;
   justify-content: center;
@@ -185,7 +185,7 @@ p {
   font-size: 60px;
   font-family: 'Times New Roman', serif;
   text-transform: uppercase;
-  padding: 0 20%;
+  margin: 3% 0%;
 }
 
 /* Error box inside section */
@@ -198,13 +198,23 @@ p {
   justify-content: center;
   border-radius: 8px;
   height: 60%;
+  min-width: 300px;
+  min-height: 250px;
 }
 
 /* Spans inside error */
-span:nth-child(1) { color: var(--primary-green); }
-span:nth-child(2) { color: var(--white); }
-span:nth-child(3) { color: var(--primary-green); }
-span:nth-child(4) { color: var(--white); }
+span:nth-child(1) {
+  color: var(--primary-green);
+}
+span:nth-child(2) {
+  color: var(--white);
+}
+span:nth-child(3) {
+  color: var(--primary-green);
+}
+span:nth-child(4) {
+  color: var(--white);
+}
 
 /* Media Queries */
 @media (max-width: 600px) {
@@ -222,14 +232,16 @@ span:nth-child(4) { color: var(--white); }
     height: 20%;
   }
   p {
-    height: 90%;
-    width: 80%;
+    margin: none;
+    height: 95%;
     font-size: 22px;
   }
 }
 
 @media (min-width: 601px) and (max-width: 1200px) {
   p {
+    height: 95%;
+    margin: none;
     font-size: 40px;
   }
 }
