--- a/assets/style.css
+++ b/assets/style.css
@@ -177,7 +177,7 @@ p {
   text-align: center;
   background-color: var(--black);
   width: 90%;
-  height: 100%;
+  height: 90%;
   border-radius: 8px;
   display: flex;
   justify-content: center;
@@ -186,6 +186,17 @@ p {
   font-family: 'Times New Roman', serif;
   text-transform: uppercase;
   margin: 3% 0%;
+}
+a {
+  height: 5%;
+  border-radius: var(--radius);
+  color: var(--secondary-green);
+  padding: 1% 1%;
+  background-color: var(--primary-green);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 
 /* Error box inside section */
